--- a/app/src/main/res/layout/fragment_fragment_2.xml
+++ b/app/src/main/res/layout/fragment_fragment_2.xml
@@ -10,34 +10,45 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
-
-    <DatePicker
-        android:id="@+id/datePicker"
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="알림을 보낼 사용자의 번호"
+        android:textSize="18sp"
+        android:layout_marginTop="20dp"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        />
+    <Button
+        android:id="@+id/dateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:text="1996/08/28"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
-        android:datePickerMode="spinner"
-        android:calendarTextColor="@color/colorPrimaryDark"
-        />
-    <TimePicker
-        android:id="@+id/timePicker"
-        android:layout_width="match_parent"
+
+    />
+    <Button
+        android:id="@+id/timeButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:timePickerMode="spinner"
+        android:textSize="24sp"
+        android:text="AM 09시 20분"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         />
-
-
-    <TextView
+    <EditText
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:text="123"
+        android:hint="보내고자하는 메시지를 입력해 주세요"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textSize="24sp" />
     <!-- TODO: Update blank fragment layout -->
 </LinearLayout>
+
 </ScrollView>
