--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -24,16 +24,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:text="username"
                 android:padding="10dp"/>
 
             <TextView
-                android:id="@+id/content"
+                android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:layout_below="@id/username"
-                android:text="contentasdfasdfasdfasdfasdsdfasdfasdsdfasdfasdsdfasdfasdssdfasdfasddfasdfasdsdfasdfasdfd"
                 android:textAlignment="viewStart" />
 
             <TextView
@@ -42,15 +40,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
 
-                android:padding="10dp"
-                android:text="2018/07/16" />
+                android:padding="10dp" />
             <TextView
                 android:id="@+id/rec_date"
                 android:layout_width="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_height="wrap_content"
-                android:text="2018/07/13"
                 android:padding="10dp"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
