--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -8,6 +8,8 @@
         android:id="@+id/media_card_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         card:cardBackgroundColor="@android:color/white"
         card:cardElevation="4dp"
         card:cardUseCompatPadding="true">
