--- a/app/src/main/res/layout/fragment_fragment_2.xml
+++ b/app/src/main/res/layout/fragment_fragment_2.xml
@@ -4,9 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <Spinner
+
         android:id="@+id/sortSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_alignParentRight="true"
         android:layout_weight="1"/>
     <android.support.v7.widget.RecyclerView
