--- a/app/src/main/res/layout/activity_detail_msg.xml
+++ b/app/src/main/res/layout/activity_detail_msg.xml
@@ -95,14 +95,22 @@
                 </FrameLayout>
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
                 <FrameLayout
-                    android:layout_width="180dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/noframe"
-                    android:paddingTop="20dp">
+                    android:paddingTop="20dp"
+                    >
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -121,11 +129,15 @@
                     </android.support.design.widget.TextInputLayout>
 
                 </FrameLayout>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                >
                 <FrameLayout
-                    android:layout_width="180dp"
+                    android:layout_width="match_parent"
                     android:id="@+id/re"
-                    android:layout_toRightOf="@+id/noframe"
-                    android:layout_marginLeft="10dp"
                     android:layout_height="wrap_content"
                     android:paddingTop="20dp">
                     <android.support.design.widget.TextInputLayout
@@ -146,6 +158,7 @@
                     </android.support.design.widget.TextInputLayout>
                 </FrameLayout>
             </RelativeLayout>
+        </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
