--- a/app/src/main/res/layout/activity_adduser.xml
+++ b/app/src/main/res/layout/activity_adduser.xml
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="150dp">
@@ -57,6 +57,30 @@
                 android:layout_width="102dp"
                 android:layout_height="102dp"
                 android:layout_gravity="center" />
+        </FrameLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+            <TextView
+                android:id="@+id/profile_friend_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:layout_gravity="center"/>
+        </FrameLayout>
+        <FrameLayout
+            android:layout_width="102dp"
+            android:layout_height="56dp"
+            android:layout_gravity="center">
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="친구 추가"
+                android:background="@color/primary"
+                android:textColor="@color/white"
+                style="@style/Widget.AppCompat.Button.Colored"
+                />
         </FrameLayout>
 
     </LinearLayout>
