Update Update Add Friend Function // Merge branch 'master' of https://github.com/ssgkmd/Noti into SongP

--- a/app/src/main/res/layout/activity_adduser.xml
+++ b/app/src/main/res/layout/activity_adduser.xml
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="150dp">
@@ -74,6 +74,7 @@
             android:layout_height="48dp"
             android:layout_gravity="center">
             <android.support.v7.widget.AppCompatButton
+                android:id="@+id/profile_friend_addbutton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="친구 추가"
@@ -83,6 +84,34 @@
 
         </FrameLayout>
 
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/layout_profile_notfound"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/baseline_close_white_48"
+                android:backgroundTint="@color/divider"/>
+        </FrameLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@color/divider"
+                android:textSize="15dp"
+                android:text="존재하지 않는 사용자 입니다."
+                android:layout_gravity="center"/>
+        </FrameLayout>
     </LinearLayout>
 
 
