--- a/app/src/main/res/layout/fragment_fragment_3.xml
+++ b/app/src/main/res/layout/fragment_fragment_3.xml
@@ -17,6 +17,9 @@
                 android:layout_height="125dp"
                 android:orientation="vertical">
                 <RelativeLayout
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:id="@+id/layout_setting_profile"
                     android:layout_width="match_parent"
                     android:layout_height="125dp"
                     android:paddingLeft="20dp"
@@ -45,14 +48,15 @@
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <TextView
-                                    android:id="@+id/layout_profile_userid"
+                                    android:id="@+id/layout_profile_username"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textSize="20dp"
-                                    android:text="Song Inseok"
+                                    android:text="NULL"
                                     android:textColor="@color/black"/>
                                 <TextView
-                                    android:text="+82 10-4622-6902"
+                                    android:id="@+id/layout_profile_phonenumber"
+                                    android:text="NULL"
                                     android:layout_width="wrap_content"
                                     android:layout_height="20dp" />
                             </LinearLayout>
@@ -72,6 +76,123 @@
                             android:backgroundTint="@color/divider"/>
                     </RelativeLayout>
                  
+                </RelativeLayout>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp">
+
+                </FrameLayout>
+                <RelativeLayout
+                    android:id="@+id/layout_setting_notice"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingLeft="20dp"
+                    android:background="@drawable/border">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentLeft="true"
+                        android:orientation="horizontal">
+                        <RelativeLayout
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="center_vertical">
+                            <ImageView
+                                android:background="@drawable/baseline_info_white_48"
+                                android:backgroundTint="@color/divider"
+                                android:layout_width="36dp"
+                                android:layout_height="36dp" />
+                        </RelativeLayout>
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="10dp">
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="18dp"
+                                    android:text="공지사항"
+                                    android:textColor="@color/black"/>
+                            </LinearLayout>
+
+                        </RelativeLayout>
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:layout_width="36dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:gravity="center_vertical">
+                        <ImageView
+                            android:layout_width="36dp"
+                            android:layout_height="36dp"
+                            android:background="@drawable/baseline_navigate_next_black_48"
+                            android:backgroundTint="@color/divider"/>
+                    </RelativeLayout>
+
+                </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/layout_setting_help"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingLeft="20dp"
+                    android:background="@drawable/border">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentLeft="true"
+                        android:orientation="horizontal">
+                        <RelativeLayout
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="center_vertical">
+                            <ImageView
+                                android:background="@drawable/baseline_help_black_48"
+                                android:backgroundTint="@color/divider"
+                                android:layout_width="24dp"
+                                android:layout_height="24dp" />
+                        </RelativeLayout>
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="10dp">
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="18dp"
+                                    android:text="도움말"
+                                    android:textColor="@color/black"/>
+                            </LinearLayout>
+
+                        </RelativeLayout>
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:layout_width="36dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:gravity="center_vertical">
+                        <ImageView
+                            android:layout_width="36dp"
+                            android:layout_height="36dp"
+                            android:background="@drawable/baseline_navigate_next_black_48"
+                            android:backgroundTint="@color/divider"/>
+                    </RelativeLayout>
+
                 </RelativeLayout>
             </LinearLayout>
         </ScrollView>
