--- a/app/src/main/res/layout/activity_sendmsg.xml
+++ b/app/src/main/res/layout/activity_sendmsg.xml
@@ -61,6 +61,7 @@
                         android:layout_height="wrap_content"
                         >
                         <EditText
+                            android:id="@+id/textbox_title"
                             android:layout_width="match_parent"
                             android:layout_height="60dp"
                             android:drawableLeft="@drawable/baseline_label_black_24"
@@ -122,6 +123,7 @@
                         android:layout_height="wrap_content"
                         >
                         <EditText
+                            android:id="@+id/textbox_content"
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
                             android:drawableLeft="@drawable/baseline_more_vert_white_24"
@@ -222,7 +224,7 @@
 
     </android.support.v4.widget.NestedScrollView>
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_sendmsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:fabSize="normal"
