--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,7 +2,7 @@
     <resources>
         <color name="primary">#03a9f4</color>
         <color name="primary_dark">#0288d1</color>
-        <color name="primary_light">#b3e5fc</color>
+        <color name="primary_light">#d6e6f5</color>
         <color name="accent">#FF5252</color>
         <color name="primary_text">#212121</color>
         <color name="secondary_text">#757575</color>
